--- a/src/js/main.sass
+++ b/src/js/main.sass
@@ -30,13 +30,28 @@ body
   text-align: center
   cursor: pointer
 
-  &:focus
-    outline: 0
-
-  &:hover
+  &:hover, &:focus
     box-shadow: 0 15px 30px 0 rgba(0,0,0,0.11), 0 5px 15px 0 rgba(0,0,0,0.08)
     transform: translateY(-1px)
+    outline: 0
 
     &:active
       box-shadow: 0 0 0 0 rgba(0,0,0,0.11), 0 0 0 0 rgba(0,0,0,0.08)
       transform: translateY(0px)
+
+input[type="text"]
+  border: 0
+  box-shadow: inset 0 0 20px 0px rgba(0, 0, 0, 0.44)
+  background: #724821
+  color: #fff
+  padding: 8px
+  border-radius: 6px
+  margin-top: .5em
+  font-size: 1.5em
+  text-align: center
+  text-transform: uppercase
+  transition: box-shadow .2s ease-in-out
+
+  &:focus
+    outline: 0
+    box-shadow: inset 0 0 20px 6px rgba(0, 0, 0, 0.44)
