--- a/src/js/main.sass
+++ b/src/js/main.sass
@@ -2,8 +2,8 @@
 @tailwind utilities
 
 html, body
-  height: 100vh
-  width: 100vw
+  height: 100%
+  width: 100%
   overflow: hidden
   font-size: calc(13px + 1vw)
 
