--- a/src/js/main.sass
+++ b/src/js/main.sass
@@ -1,10 +1,10 @@
 @tailwind preflight
 @tailwind utilities
 
-html, body
+html
   height: 100%
   width: 100%
-  overflow: hidden
+  // overflow: hidden
   font-size: calc(13px + 1vw)
 
 body
@@ -13,6 +13,7 @@ body
   background-image: url("../img/bg.jpg")
   background-size: cover
   background-position: center
+  min-height: 100%
 
 .btn
   display: block
